k8s-yaml/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api
    spec:
      containers: 
      - name: api-container
        image: api-server
        ports:
        - containerPort: 8080
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5

---
apiVersion: v1
kind: Service

metadata:
  name: api-svc
spec:
  selector:
    app: api  #deployment의 selector.matchLables.app 와 동일
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      type: ClusterIP  #ingress 사용중으로, LoadBalancer 사용 X
